Version 16.26.6 - 23 January 2014

- fix hidden icon in individual package selection (mga#12397)

Version 16.26.5 - 22 January 2014

- release notes dialog:
  o fix untranslated button

Version 16.26.4 - 22 January 2014

- debug image:
  o add a warning about QWERTY keyboard
- help dialogs:
  o do warn on first screenshot (mga#11176)
  o fix lost help screenshots (mga#11176)

Version 16.26.3 - 21 January 2014

- help dialogs:
  o do not warn if a screenshot already has been taked (mga#11176)

Version 16.26.2 - 20 January 2014

- left background for final release of Mageia 4

Version 16.26.1 - 20 January 2014

- partitioning:
  o increase back minimum partition width for Oxygen (mga#11977)

Version 16.26 - 20 January 2014

- fix detecting if basesystem is installed (mga#10722)
  thus fixing "basesystem package not selected"
- partitioning:
  o fix sizing partition widgets
  o fix not moving window (mga#11790, mga#11988, mga#11977)
  o revert minimum partition width to its pre-gtk3 value
  o show labels on partition buttons

Version 16.25 - 19 January 2014

- add Mageia 4 desktop images

Version 16.24 - 18 January 2014

- help dialogs:
  o make screenshots work (mga#11176)
  o fix untranslated button & title (mga#9828)

Version 16.23 - 16 January 2014

- partitioning:
  o do not show labels on partition buttons (mga#11988)

Version 16.22 - 15 January 2014

- partitioning:
  o fix "No GSettings schemas are installed on the system" error when
    inspecting partitions (mga#12279)
- services:
  o use --no-block with chkconfig and systemctl enable to prevent systemd reload
    and potential crash (especially during first/live boot)

Version 16.21 - 13 January 2014

- partitioning:
  o do not propose check bad blocks for btrfs (Manuel Hiebel, mga#10116)
  o increase minimum partition width for Oxygen (mga#11977)
    (if not enough, we will disable labels on partitions buttons again)
- revert back to matchbox instead of mutter as it doesn't fix