@@ -1,3 +1,6 @@
+- Ensure uid/gid extraction works when adding users via summary page
+  (fixes chown'ing user to root when adding existing user on upgrade mga#12375)
+
 Version 16.26.6 - 23 January 2014
 
 - fix hidden icon in individual package selection (mga#12397)
